--- a/app/views/partsbuilder_mailer/finished_notice.html.erb
+++ b/app/views/partsbuilder_mailer/finished_notice.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <b>Dear <%= @user.fullname %></b><br><br>
-    <% if @error.nil? %>
+    <% if @error.nil? || @error.empty? %>
       Your PartsBuilder job is finished.  Please go to <a href="http://www.biopartsbuilder.org" target="_blank">http://www.biopartsbuilder.org</a> to view results.<br><br>
     <% else %>
       There is something wrong when handling your data. The error information is "<%= @error%>".  Please go to <a href="http://www.biopartsbuilder.org" target="_blank">http://www.biopartsbuilder.org</a> to check your jobs.<br><br>
