--- a/app/views/protocols/index.html.erb
+++ b/app/views/protocols/index.html.erb
@@ -1,5 +1,6 @@
-<h3>Design Standards</h3>
-
+<div class='page-header'>
+  <h3><i class='icon-book'> </i>Design Standards</h3>
+</div>
 <table class="tablesorter-default" id="sortable-table">
   <thead>
     <tr>
