--- a/app/views/admin/protocols/index.html.erb
+++ b/app/views/admin/protocols/index.html.erb
@@ -1,5 +1,6 @@
-<h3>Design Standards</h3>
-
+<div class='page-header'>
+  <h3><i class='icon-book'> </i>Design Standards</h3>
+</div>
 <table class="tablesorter-default" id="sortable-table">
   <thead>
     <tr>
@@ -30,7 +31,6 @@
     <% end %>
   </tbody>
 </table>
-<br />
-
-<%= link_to 'New Design Standard', new_admin_protocol_path, {:style => 'color: #049cdb;'} %>
-<br><br>
+<div class='form-actions'>
+  <%= link_to 'New Design Standard', new_admin_protocol_path, :class => 'btn btn-primary' %>
+</div>
