--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,6 +1,12 @@
-<h3>Editing user</h3>
+<div class='page-header'>
+  <h3><i class='icon-play-circle'> </i>Editing user</h3>
+</div>
 <%= simple_form_for [:admin,@user] do |f| %>
-  <%= f.input :fullname %>
-	<%= f.association :group %>
-	<%= f.submit :class => 'btn btn-primary' %>
+  <div class='container'>
+    <%= f.input :fullname %>
+    <%= f.association :group %>
+  </div>
+  <div class='form-actions'>
+    <%= f.submit :class => 'btn btn-primary' %>
+  </div>
 <% end %>
