--- a/app/views/designs/new.html.erb
+++ b/app/views/designs/new.html.erb
@@ -1,4 +1,6 @@
-<h3>New design</h3>
+<div class="page-header">
+  <h3><i class="icon-play-circle"> </i>New design</h3>
+</div>
 
 <%= simple_form_for(@design) do |f| %>
   <h5> 1. Select one design standard: </h5>
@@ -10,7 +12,7 @@
       </tr>
     <% end %>
   </table>
-
+  <hr />
   <h5> 2. Select parts: </h5> 
   <b>Filter:</b><%= text_field_tag :search %>
   <div id="newDiv">
@@ -30,14 +32,15 @@
             <td><%= f.check_box(:part_id, {:multiple => true}, part.id, nil) %></td>
             <td><%= part.name %></td>
             <td><%= part.sequence.accession %></td>
-						<td><%= begin; part.sequence.organism.fullname; rescue; "Unknown"; end %></td>
+            <td><%= begin; part.sequence.organism.fullname; rescue; "Unknown"; end %></td>
             <td><%= part.created_at %></td>
           </tr>
         <% end %>
       </tbody>
     </table>
   </div>
-  <br>
-  <%= f.submit :class => "btn btn-primary" %>
+  <div class="form-actions">
+    <%= f.submit :class => "btn btn-primary" %>
+  </div>
 <% end %>
 
