--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,6 @@
-<h3>Jobs</h3>
+<div class='page-header'>
+  <h3><i class='icon-book'> </i>Jobs</h3>
+</div>
 <table class="tablesorter-default" id="sortable-table">
   <thead>
     <tr>
