--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,6 @@
-<h3>Orders</h3>
+<div class='page-header'>
+  <h3><i class='icon-book'> </i>Orders</h3>
+</div>
 
 <b>Filter:</b><%= text_field_tag :search %>
 <table class="tablesorter-default" id="sortable-table">
@@ -25,8 +27,7 @@
     <% end %>
   </tbody>
 </table>
-
+<div class='form-actions'>
+  <%= link_to 'New Order', new_order_path, :class => 'btn btn-primary' %>
+</div>
 <br />
-
-<%= link_to 'New Order', new_order_path, {:style => 'color: #049cdb;'} %>
-<br><br><br>
