--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,4 +1,6 @@
-<h3>parts</h3>
+<div class="page-header">
+  <h3><i class="icon-book"> </i>parts</h3>
+</div>
 <b>Filter:</b><%= text_field_tag :search %>
 <div id="indexDiv">
   <table class="tablesorter-default" id="sortable-table">
@@ -15,10 +17,10 @@
     <tbody>
       <% @parts.each do |part| %>
         <tr>
-					<td><%= link_to part.id, part_path(part.id), {:style => 'color: #049cdb;' } %></td>
+          <td><%= link_to part.id, part_path(part.id), {:style => 'color: #049cdb;' } %></td>
           <td><%= part.name %></td>
           <td><%= part.sequence.accession %></td>
-					<td><%= begin; part.sequence.organism.fullname; rescue; "Unknown"; end %></td>
+          <td><%= begin; part.sequence.organism.fullname; rescue; "Unknown"; end %></td>
           <td><%= part.sequence.annotation %></td>
           <td><%= part.created_at %></td>
         </tr>
@@ -26,7 +28,7 @@
     </tbody>
   </table>
 </div>
+<div class="form-actions">
+  <%= link_to 'New Part', new_part_path, :class => 'btn btn-primary' %>
+</div>
 <br />
-
-<%= link_to 'New Part', new_part_path, {:style => 'color: #049cdb;' } %>
-<br><br>
