--- a/app/views/protocols/show.html.erb
+++ b/app/views/protocols/show.html.erb
@@ -1,17 +1,20 @@
-<h3>Design standard <%= @protocol.name %></h3>
-<br>
-<b>Codon Optimization:</b>&nbsp;&nbsp;<%= @protocol.organism.fullname %><br><br>
-<b>External Prefix:</b>&nbsp;&nbsp;<%= @protocol.ext_prefix %><br><br>
-<b>External Suffix:</b>&nbsp;&nbsp;<%= @protocol.ext_suffix %><br><br>
-<b>Internal Prefix:</b>&nbsp;&nbsp;<%= @protocol.int_prefix %><br><br>
-<b>Internal Suffix:</b>&nbsp;&nbsp;<%= @protocol.int_suffix %><br><br>
-<b>Size Restriction:</b>&nbsp;&nbsp;<%= @protocol.construct_size %><br><br>
-<b>Forbidden enzymes:</b>&nbsp;&nbsp;<%= @protocol.forbid_enzymes %><br><br>
-<b>Check enzymes:</b>&nbsp;&nbsp;<%= @protocol.check_enzymes %><br><br>
-<b>Overlap:</b>
-<div id="overlapDiv">
-  <%= @protocol.overlap %>
+<div class='page-header'>
+  <h3><i class='icon-file'> </i>Design standard <%= @protocol.name %></h3>
 </div>
-<br>
-<b>Comment:</b>&nbsp;&nbsp;<%= @protocol.comment %><br><br>
-<br><br>
+<div class='container'>
+  <b>Codon Optimization:</b>&nbsp;&nbsp;<%= @protocol.organism.fullname %><br><br>
+  <b>External Prefix:</b>&nbsp;&nbsp;<%= @protocol.ext_prefix %><br><br>
+  <b>External Suffix:</b>&nbsp;&nbsp;<%= @protocol.ext_suffix %><br><br>
+  <b>Internal Prefix:</b>&nbsp;&nbsp;<%= @protocol.int_prefix %><br><br>
+  <b>Internal Suffix:</b>&nbsp;&nbsp;<%= @protocol.int_suffix %><br><br>
+  <b>Size Restriction:</b>&nbsp;&nbsp;<%= @protocol.construct_size %><br><br>
+  <b>Forbidden enzymes:</b>&nbsp;&nbsp;<%= @protocol.forbid_enzymes %><br><br>
+  <b>Check enzymes:</b>&nbsp;&nbsp;<%= @protocol.check_enzymes %><br><br>
+  <b>Overlap:</b>
+  <div id="overlapDiv">
+    <%= @protocol.overlap %>
+  </div>
+  <br>
+  <b>Comment:</b>&nbsp;&nbsp;<%= @protocol.comment %><br><br>
+</div>
+<br />
