--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,11 @@
-<h3>Editing user</h3>
+<div class='page-header'>
+  <h3><i class='icon-file'> </i>Editing user</h3>
+</div>
 <%= simple_form_for @user do |f| %>
-  <%= f.input :fullname %>
-  <%= f.submit :class => 'btn btn-primary' %>
+  <div class='container'>
+    <%= f.input :fullname %>
+  </div>
+  <div class='form-actions'>
+    <%= f.submit :class => 'btn btn-primary' %>
+  </div>
 <% end %>
