--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,7 +1,7 @@
-<div class='page-header'>
-  <h3><i class='icon-book'> </i>Users</h3>
-</div>
-<table class="table table-stripped">
+<h2><i class='icon-book'> </i>Users</h2>
+<hr />
+<%= will_paginate @users %>
+<table class="table table-bordered table-stripped">
   <tr>
     <th>#</th>
     <th>Fullname</th>
