--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,13 @@
-<h3>Welcome to PartsBuilder</h3>
-<br>
-<h4>How to design your parts</h4><br>
-<b>Solution 1</b><br>
-The simplest way: go to "AutoBuild", fill out all required information, one click, your parts designed<br><br>
-<b>Solution 2</b><br>
-A more flexible way to handle your data: <br>
-Step 1. Parts => New, input a list of protein/nucleotide accession number<br>
-Step 2. Designs => New, select one design standard and one or more parts to design<br>
-Step 3. Orders => New, select designs to order<br>
-<br><br>
+<div><h3>Welcome to PartsBuilder</h3></div>
+<div>
+  <br>
+  <h4>How to design your parts</h4><br>
+  <b>Solution 1</b><br>
+  The simplest way: go to "AutoBuild", fill out all required information, one click, your parts designed<br><br>
+  <b>Solution 2</b><br>
+  A more flexible way to handle your data: <br>
+  Step 1. Parts => New, input a list of protein/nucleotide accession number<br>
+  Step 2. Designs => New, select one design standard and one or more parts to design<br>
+  Step 3. Orders => New, select designs to order<br>
+  <br><br>
+</div>
