--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,7 +1,7 @@
-<div class='page-header'>
-  <h3><i class='icon-book'> </i>Jobs</h3>
-</div>
-<table class="tablesorter-default" id="sortable-table">
+<h2><i class='icon-book'> </i>Jobs</h2>
+<hr />
+<%= will_paginate @jobs %>
+<table class="table table-bordered table-stripped" >
   <thead>
     <tr>
       <th>#</th>
@@ -19,8 +19,8 @@
         <td><span class="label <%= get_status_label_style(job.job_status.name)%>"><%= job.job_status.name %></span></td>
         <td><span class="<%= get_type_style(job.job_type.name)%>"><%= job.job_type.name %></span></td>
         <td><%= job.error_info || 'none' %></td>
-        <td><%= job.created_at %></td>
-        <td><%= job.updated_at %></td>
+        <td><%= l job.created_at.in_time_zone('EST') %></td>
+        <td><%= l job.updated_at.in_time_zone('EST') %></td>
       </tr>
     <% end %>
   </tbody>
