--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,21 +1,15 @@
-<div class='page-header'>
-  <h3><i class='icon-book'> </i>User Info</h3>
-</div>
-<table class="table table-stripped">
-  <tr>
-    <th>Fullname</th>
-    <th>Email</th>
-    <th>Group</th>
-    <th>Provider</th>
-  </tr>
-
-  <tr>
-    <td><%= @user.fullname %></td>
-    <td><%= @user.email %></td>
-    <td><%= @user.group.name %></td>
-    <td><%= @user.provider %></td>
-  </tr>
-</table>
+<h2><i class='icon-book'> </i>User Info</h2>
+<hr />
+<dl class="dl-horizontal">
+  <dt>Fullname</dt>
+  <dt>Email</dt>
+  <dt>Group</dt>
+  <dt>Provider</dt>
+  <dd><%= @user.fullname %></dd>
+  <dd><%= @user.email %></dd>
+  <dd><%= @user.group.name %></dd>
+  <dd><%= @user.provider %></dd>
+</dl>
 <div class='form-actions'>
   <%= link_to 'Edit', edit_user_path(@user), :class => 'btn btn-primary' %>
 </div>
