--- a/app/views/designs/show.html.erb
+++ b/app/views/designs/show.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
-  <h3><i class='icon-file'> </i><%= @design.part.name %></h3>
+  <h2><i class='icon-file'> </i><%= @design.part.name %></h2>
 </div>
-<h5>Protocol: <%= @design.protocol.name %></h5>
+<h5>Design Standard: <%= @design.protocol.name %></h5>
 
 <% @design.construct.each do |construct| %>
   <b><%= construct.name %></b><br>
