--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,33 +1,30 @@
-<div class="page-header">
-  <h3><i class="icon-book"> </i>parts</h3>
-</div>
-<b>Filter:</b><%= text_field_tag :search %>
-<div id="indexDiv">
-  <table class="tablesorter-default" id="sortable-table">
-    <thead>
+<h2><i class="icon-book"> </i>parts</h2>
+<hr />
+<%= will_paginate @parts %>
+<table class="table table-bordered table-stripped">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Part Name</th>
+      <th>Protein Accession Number</th>
+      <th>Organism</th>
+      <th>Type</th>
+      <th>Created_at</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @parts.each do |part| %>
       <tr>
-        <th>#</th>
-        <th>Part Name</th>
-        <th>Protein Accession Number</th>
-        <th>Organism</th>
-        <th>Type</th>
-        <th>Created_at</th>
+        <td><%= link_to part.id, part_path(part.id), {:style => 'color: #049cdb;' } %></td>
+        <td><%= part.name %></td>
+        <td><%= part.sequence.accession %></td>
+        <td><%= begin; part.sequence.organism.fullname; rescue; "Unknown"; end %></td>
+        <td><%= part.sequence.annotation %></td>
+        <td><%= l part.created_at.in_time_zone('EST') %></td>
       </tr>
-    </thead>
-    <tbody>
-      <% @parts.each do |part| %>
-        <tr>
-          <td><%= link_to part.id, part_path(part.id), {:style => 'color: #049cdb;' } %></td>
-          <td><%= part.name %></td>
-          <td><%= part.sequence.accession %></td>
-          <td><%= begin; part.sequence.organism.fullname; rescue; "Unknown"; end %></td>
-          <td><%= part.sequence.annotation %></td>
-          <td><%= part.created_at %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+    <% end %>
+  </tbody>
+</table>
 <div class="form-actions">
   <%= link_to 'New Part', new_part_path, :class => 'btn btn-primary' %>
 </div>
