--- a/app/views/protocols/index.html.erb
+++ b/app/views/protocols/index.html.erb
@@ -1,7 +1,7 @@
-<div class='page-header'>
-  <h3><i class='icon-book'> </i>Design Standards</h3>
-</div>
-<table class="tablesorter-default" id="sortable-table">
+<h2><i class='icon-book'> </i>Design Standards</h2>
+<hr />
+<%= will_paginate @protocols %>
+<table class="table table-bordered table-stripped">
   <thead>
     <tr>
       <th>#</th>
