--- a/app/views/designs/new.html.erb
+++ b/app/views/designs/new.html.erb
@@ -12,10 +12,11 @@
     <% end %>
   </table>
   <hr />
+ 
   <h5> 2. Select parts: </h5> 
   <b>Filter:</b><%= text_field_tag :search %>
   <div id="newDiv">
-    <table class="tablesorter-default" id="sortable-table">
+    <table class="table table-bordered table-striped" id="sortable-table">
       <thead>
         <tr>
           <th></th>
