--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -18,7 +18,7 @@
       <td><%= user.email %></td>
       <td><%= user.group.name %></td>
       <td><%= user.provider %></td>
-      <td><%= link_to 'Edit', edit_admin_user_path(user.id), {:style => 'color: #049cdb;'} %></td>
+      <td><%= link_to 'Edit', edit_admin_user_path(user.id) %></td>
     </tr>
   <% end %>
 </table>
