--- a/app/views/designs/index.html.erb
+++ b/app/views/designs/index.html.erb
@@ -17,7 +17,7 @@
         <td><%= design.id %></td>
         <td><%= design.part.name %></td>
         <td><%= design.protocol.name %></td>
-        <td><%= link_to 'View', design_path(design.id), {:style => 'color: #049cdb;'} %></td>
+        <td><%= link_to 'View', design_path(design.id) %></td>
         <td><%= l design.created_at.in_time_zone('EST') %></td>
       </tr>
     <% end %>
