--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -16,7 +16,7 @@
   <h5> Select designs: </h5> 
   <b>Filter:</b><%= text_field_tag :search %>
   <div id="newDiv">
-    <table class="table table-bordered table-stripped" id="sortable-table">
+    <table class="table table-bordered table-striped" id="sortable-table">
       <thead>
         <tr>
           <th></th>
