--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -1,5 +1,6 @@
 <h2><i class="icon-play-circle"> </i>New part</h2>
 <hr />
+
 <%= form_tag({:controller => "parts", :action => "confirm"}, :method => "post", :multipart => true) do %>
   <table>
     <tr>
@@ -19,7 +20,7 @@
       <td colspan='2'><%= file_field_tag(:sequence_file)%></td>
     </tr>
     <tr>
-      <td colspan='2'>Important: special format required, see <%= link_to 'description', {:action => :get_description_file}, {:style => 'color: #049cdb;'} %></td>
+      <td colspan='2'>Important: special format required, see <%= link_to 'description', {:action => :get_description_file} %></td>
     </tr>
     <tr>
       <td colspan='2'>&nbsp;</td>
