--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -2,13 +2,13 @@
 <hr />
 
 <i class='icon-info-sign'> Refresh this page to check your job status or wait for the email notice</i>
-<br><br>
-<b>Type: </b>&nbsp;&nbsp;<%= @job.job_type.name %><br><br>
-<b>Status: </b>&nbsp;&nbsp;<span class="label <%= get_status_label_style(@job.job_status.name)%>"><%= @job.job_status.name %></span><br><br>
-<b>Errors: </b>&nbsp;&nbsp;<%= @job.error_info || 'none' %><br><br>
-<b>User: </b>&nbsp;&nbsp;<%= @job.user.fullname %><br><br>
-<b>Created_at: </b>&nbsp;&nbsp;<%= @job.created_at %><br><br>
-<b>Updated_at: </b>&nbsp;&nbsp;<%= @job.updated_at %><br><br>
+<br /><br />
+<b>Type: </b>&nbsp;&nbsp;<%= @job.job_type.name %><br /><br />
+<b>Status: </b>&nbsp;&nbsp;<span class="label <%= get_status_label_style(@job.job_status.name)%>"><%= @job.job_status.name %></span><br /><br />
+<b>Errors: </b>&nbsp;&nbsp;<span <% if @job.error_info %> class="text-error" <% end %>><%= @job.error_info || 'none' %></span><br /><br />
+<b>User: </b>&nbsp;&nbsp;<%= @job.user.fullname %><br /><br />
+<b>Created_at: </b>&nbsp;&nbsp;<%= @job.created_at %><br /><br />
+<b>Updated_at: </b>&nbsp;&nbsp;<%= @job.updated_at %><br /><br />
 
 <% if @job.job_status.name == 'finished' %>
   <div class='form-actions'>
