--- a/app/views/parts/confirm.html.erb
+++ b/app/views/parts/confirm.html.erb
@@ -1,45 +1,52 @@
 <h2><i class="icon-info-sign"> Please Check</i></h2>
 <hr />
+
 <% unless @errors.empty? %>
   <p style="color:red">There are errors in your uploaded file.</p>
-  <p>Please note that the description line must follow the format: <b>>part_name|accession_number|organism|comments</b>.  Organism and comments are optional. One sequence can only have one description line.</p>
+  <p>Please note that the description line must follow the format: <b>>part_name|part_type|accession_number|organism|comments</b>.  Organism and comments are optional. One sequence can only have one description line.</p>
   <hr />
   <p><b>Errors:</b></p>
-  <% @errors.each do |key, value| %>
-    &nbsp;&nbsp;<%= value['error'] %> <br />
+  <% @errors.each do |entry| %>
+    &nbsp;&nbsp;<%= entry %> <br />
   <% end %>
   <div class="form-actions">
     <%= link_to 'Go Back', new_part_path, :class => 'btn btn-primary' %>
   </div>
   <br />
+
 <% else %>
   <%= form_tag({:controller => "parts", :action => "create"}, :method => "post", :multipart => true) do %>
-    <% if @accessions.nil? %>
+
+    <% if !@sequences.nil? %>
       <%= hidden_field_tag(:sequence_file, @seq_file) %>
       <p><b><%= @sequences.size %></b> parts to be created.  They are:</p>
       <hr />
       <table class="table table-striped">
         <tr>
           <th>Part Name</th>
+          <th>Part Type</th>
           <th>Accession Number</th>
           <th>Organism</th>
         </tr>
-        <% @sequences.each do |key, seq| %>
+        <% @sequences.each do |seq| %>
           <tr>
             <td><%= seq['part'] %></td>
+            <td><%= seq['type'] %></td>
             <td><%= seq['accession'] %></td>
             <td><%= seq['org'] %></td>
           </tr>
         <% end %>
       </table>
+
     <% else %>
-      <%= hidden_field_tag(:accession, @accession_origin) %>
+      <%= hidden_field_tag('accession[]', @accessions) %>
       <p><b><%= @accessions.size %></b> parts to be created. They are:</p>
       <hr />
       <% @accessions.each do |entry| %>
         <p>&nbsp;&nbsp;<%= entry %></p>
       <% end %>
     <% end %>
+
     <div class="form-actions">
       <table>
         <tr>
