--- a/app/views/parts/show.html.erb
+++ b/app/views/parts/show.html.erb
@@ -1,16 +1,47 @@
 <div class="page-header">
   <h3><i class="icon-file"> </i>Part <%= @part.id %></h3>
 </div>
-<div class="container">
-  <p>
-  <b>Name:</b> <%= @part.name %> 
-  <br><br>
-  <b>Sequence:</b>
-  <div id="seq">
-    <%= @part.sequence.seq%>
+
+<ul class="nav nav-tabs">
+  <li class="active"><a href="#info" data-toggle="tab">Info</a></li>
+  <li><a href="#design" data-toggle="tab">Designs</a></li>
+</ul>
+
+<div class="tab-content">
+  <div class="tab-pane active" id="info">
+    <b>Name:</b> <%= @part.name %> 
+    <br><br>
+    <b>Sequence:</b>
+    <div id="seq">
+      <%= @part.sequence.seq%>
+    </div>
+    </p>
   </div>
-  </p>
+
+  <div class="tab-pane" id="design">
+    <table class="table table-bordered table-stripped">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Design Standard</th>
+          <th>Designed Constructs</th>
+          <th>Created_at</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @part.designs.each do |design| %>
+          <tr>
+            <td><%= design.id %></td>
+            <td><%= link_to design.protocol.name, protocol_path(design.protocol_id) %></td>
+            <td><%= link_to 'View', part_design_path(design.part_id, design.id) %></td>
+            <td><%= l design.created_at.in_time_zone('EST') %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
+
 <div class="form-actions">
   <%= link_to 'Edit', edit_part_path(@part), :class => 'btn btn-primary' %>
 </div>
