update gem, use puma and sidekiq

--- a/app/views/designs/index.html.erb
+++ b/app/views/designs/index.html.erb
@@ -1,5 +1,7 @@
-<h2><i class="icon-book"> </i>Designs</h2>
-<hr />
+<div class="page-header">
+  <h2><i class="icon-book"> </i>Designs</h2>
+</div>
+
 <%= will_paginate @designs %>
 <table class="table table-bordered table-stripped">
   <thead>
