--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,5 +1,6 @@
-<h2><i class="icon-book"> </i>parts</h2>
-<hr />
+<div class="page-header">
+  <h2><i class="icon-book"> </i>Parts</h2>
+</div>
 <%= will_paginate @parts %>
 <table class="table table-bordered table-stripped">
   <thead>
