--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -16,7 +16,7 @@
         </tr>
         <tr>
           <td><%= text_area_tag(:accession, "", :size => "50x10")%></td>
-          <td>One id per line<br>e.g.<br>NP_539626.1<br>NP_459636.1<br>P29929.1</td>
+          <td>One id per line<br>e.g.<br>NP_058651.3<br>YP_491843.1<br>P29929.1</td>
         </tr>
       </table>
     </div>
